clean up repo with gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
-./api/eclipse
-./api/test
-./api/test-result
-./api/tmp
-./api/conf/application.conf
+.api/eclipse
+.api/test
+.api/test-result
+.api/tmp
+.api/conf/application.conf
+.api/.settings/
 .project
