--- a/conf/application.conf
+++ b/conf/application.conf
@@ -23,7 +23,7 @@ application.langs="fr,en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:hype"
+db.default.url="jdbc:h2:zenithub"
 db.default.logStatements=true
 
 # Evolutions
