--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,7 @@ db.default.logStatements=true
 logger.root=ERROR
 
 # Logger used by the framework:
-logger.play=INFO
+logger.play=DEBUG
 
 # Logger provided to your application:
 logger.application=DEBUG
